--- a/pureleague_android/app/build.gradle
+++ b/pureleague_android/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.firebase:firebase-ads:10.2.4'
-    compile 'com.parse:parse-livequery-android:1.0.3'
+    //compile 'com.parse:parse-livequery-android:1.0.3'
     compile project(':caldroid')
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
